# Personal-LOL

./: .gitignore  .gitmodules  LICENSE  README.md
backup/: lol.sql
data-sample/: README.md  api_key.json  db.json
source/client/Main/: Main.njsproj  README.md  package-lock.json
source/client/WebClient/: WebClient.njsproj  angular.json  package-lock.json  package.json
source/client/WebClient/e2e/src/: app.e2e-spec.ts
source/client/WebClient/src/app/: app.component.spec.ts  app.module.ts
source/client/WebClient/src/app/component/src/: app.component.ts  error.component.ts  header.component.ts  index.component.ts  left-menu.component.ts  summoner.component.ts
source/client/WebClient/src/app/component/template/: app.component.html  header.component.html  index.component.html  left-menu.component.html  summoner.component.html
source/client/WebClient/src/app/service/: data-api.service.ts  url-list.service.ts
source/client/WebClient/src/app/src/: app.component.ts
source/client/WebClient/src/app/test/: app.component.spec.ts
source/client/WebClient/src/app/util/: struct.ts
source/client/main/: .angular-cli.json  README.md  main.njsproj  package-lock.json  package.json
source/client/main/src/app/: app.component.spec.ts  app.module.ts
source/scripts/: run_all.bat
source/server/: CMakeLists.txt
source/server/DataApi/: DataApi.njsproj  README.md  app.ts  package-lock.json  package.json  tsconfig.json
source/server/DataApi/build_script/: pre_build.ts
source/server/DataApi/grpc_template/: service_class.ejs  service_interface.ejs
source/server/DataApi/models/server/: server.ts
source/server/DataApi/models/util/: struct.ts
source/server/DataApi/routes/: api.ts  index.ts
source/server/DataApi/views/: error.ejs  index.ejs
source/server/Generator/: CMakeLists.txt  Generator.vcxproj  Generator.vcxproj.filters
source/server/Generator/header/: ApiCaller.h  ApiHelper.h  DBConnection.h  DBReadResult.h  DBResult.h  DBRow.h  DBWriteResult.h  DataApiService.h  DataSaver.h  Server.h  ServerJob.h  WebClient.h  curl_config.h
source/server/Generator/pch/: stdafx.h
source/server/Generator/src/: ApiCaller.cpp  ApiHelper.cpp  DBConnection.cpp  DBReadResult.cpp  DBResult.cpp  DBRow.cpp  DBWriteResult.cpp  DataApiService.cpp  DataSaver.cpp  Server.cpp  ServerJob.cpp  WebClient.cpp  main.cpp
source/server/HttpServer/: HttpServer.vcxproj  HttpServer.vcxproj.filters
source/server/HttpServer/header/: Server.h
source/server/HttpServer/pch/: stdafx.h
source/server/HttpServer/src/: Server.cpp
source/server/Main/: Main.vcxproj  Main.vcxproj.filters  binding.gyp
source/server/Main/header/: WebClient.h  WebServer.h
source/server/Main/html/template/: main.mustache
source/server/Main/pch/: stdafx.h
source/server/Main/src/: WebClient.cpp  WebServer.cpp  main.cpp
source/server/RiotApi/: CMakeLists.txt  RiotApi.vcxproj  RiotApi.vcxproj.filters
source/server/RiotApi/header/: ApiList.h  ApiResultStruct.h  ApiType.h  ApiUrl.h  ChampionMasterySuburl.h  ChampionSubUrl.h  FullUrl.h  MatchSubUrl.h  RegionalEndpoint.h  RegionalProxy.h  ServerRegion.h  ServiceProxy.cpp  ServiceProxy.h  SubUrl.h  SummonerSuburl.h
source/server/RiotApi/pch/: stdafx.h
source/server/RiotApi/script/: ApiType.h.ejs  generate_api_result.ts  generate_api_type.ts  package-lock.json  package.json
source/server/RiotApi/src/: ApiResultStruct.cpp  ApiUrl.cpp  ChampionMasterySubUrl.cpp  ChampionSubUrl.cpp  FullUrl.cpp  MatchSubUrl.cpp  RegionalEndpoint.cpp  RegionalProxy.cpp  ServiceProxy.cpp  SpectatorSubUrl.cpp  SpectatorSubUrl.h  SubUrl.cpp  SummonerSuburl.cpp
source/server/WebClient/: WebClient.njsproj  app.ts  package-lock.json
source/server/data/api/: api_result.ts  api_type.ts
source/server/data/proto/: packet.proto
source/server/libRiotApi/: libRiotApi.vcxproj  libRiotApi.vcxproj.filters
source/server/libRiotApi/header/: ChampionSubUrl.h  FullUrl.h  RegionalEndpoint.h
source/server/libRiotApi/src/: RegionalEndpoint.cpp
source/server/main/: main.vcxproj  main.vcxproj.filters
source/server/main/src/: main.cpp
source/server/scripts/: cmake.sh  run_all.bat
source/server/solution/: Personal-LOL.sln
source/shared/ApiSrcData/: ApiSrcData.csproj
source/shared/ApiSrcData/Data/: ApiType.cs  InternalStruct.cs  ResultStruct.cs  TemplateData.cs
source/shared/ApiSrcData/Properties/: AssemblyInfo.cs
source/shared/ApiSrcData/Util/: Helper.cs
source/shared/ApiSrcGenerator/: ApiSrcGenerator.csproj  Dummy.cs
source/shared/ApiSrcGenerator/Data/: ApiResult.cs  ApiType.cs  InternalStruct.cs  ResultStruct.cs  TemplateData.cs
source/shared/ApiSrcGenerator/Template/: ApiResultHeader.tt  ApiResultSource.cpp  ApiResultSource.tt  ApiType.h  ApiType.tt
source/solution/: Personal-LOL.sln
