CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeHelper/CMake)
INCLUDE(msvc_support)

# MSVC settings
RUNTIME_LIBRARY_OPTION(Release /MT)
RUNTIME_LIBRARY_OPTION(Debug /MTd)

# Project name
SET(GENERATOR_PROJECT_NAME "Generator")
SET(RIOTAPI_PROJECT_NAME "RiotApi")

# Common directory
SET(SERVER_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(HEADER_DIR "header")
SET(SRC_DIR "src")
SET(PCH_DIR "pch")
SET(PCH_HEADER ${PCH_DIR}/stdafx.h)
SET(PCH_SRC ${PCH_DIR}/stdafx.cpp)

SET(EXTERNAL_DIR ${SERVER_DIR}/external)
SET(BOOST_DIR ${EXTERNAL_DIR}/boost)
SET(CURL_DIR ${EXTERNAL_DIR}/libcurl)
SET(JSON_DIR ${EXTERNAL_DIR}/nlohmann)

IF(MSVC)
	SET(VCPKG_DIR ${EXTERNAL_DIR}/vcpkg/installed/x64-windows)
ELSE(MSVC)
	SET(VCPKG_DIR ${EXTERNAL_DIR}/vcpkg/installed/x64-linux)
ENDIF(MSVC)

IF(MSVC)
	SET(MARIADB_DIR "C:\\Program Files\\MariaDB\\MariaDB Connector C 64-bit")
ELSE(MSVC)
	SET(MARIADB_DIR ${EXTERNAL_DIR}/mariadb)
ENDIF(MSVC)

# Project directory
SET(GENERATOR_ROOT_DIR ${SERVER_DIR}/Generator)
SET(RIOTAPI_ROOT_DIR ${SERVER_DIR}/RiotApi)

# Exe
IF(${CMAKE_EXE_LINKER_FLAGS} MATCHES "/machine:x64")
	SET (ARCH "64")
ELSE()
	SET (ARCH "86")
ENDIF()

# Generate library projects
IF(WIN32)
	ADD_DEFINITIONS(-DUNICODE)
	ADD_DEFINITIONS(-D_UNICODE)
	ADD_COMPILE_OPTIONS("/EHsc")
	ADD_COMPILE_OPTIONS($<$<CONFIG:Debug>:/MDd>)
	ADD_COMPILE_OPTIONS($<$<CONFIG:Release>:/MD>)
ENDIF()

ADD_SUBDIRECTORY(${GENERATOR_ROOT_DIR})
ADD_SUBDIRECTORY(${RIOTAPI_ROOT_DIR})
